--- a/package.json
+++ b/package.json
@@ -1,47 +1,75 @@
 {
-  "name": "jest-study-example-for-gowxx",
+  "name": "jest-tutorial-example",
   "version": "1.0.0",
-  "description": "学习《Jest 实践指南》的配套项目",
+  "description": "一个 Jest 的小实验",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
     "start": "webpack serve",
-    "test": "jest"
+    "lint": "eslint tests src --fix",
+    "test": "jest",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/GOWxx/jest-study-example-for-gowxx.git"
+    "url": "git+https://github.com/haixiangyan/jest-tutorial-example.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/GOWxx/jest-study-example-for-gowxx/issues"
+    "url": "https://github.com/haixiangyan/jest-tutorial/issues"
   },
-  "homepage": "https://github.com/GOWxx/jest-study-example-for-gowxx#readme",
-  "devDependencies": {
-    "@types/jest": "^27.4.1",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.2",
-    "css-loader": "^6.7.1",
-    "html-webpack-plugin": "^5.5.0",
-    "jest": "^27.5.1",
-    "jest-environment-jsdom-global": "^3.0.0",
-    "jest-location-mock": "^1.0.9",
-    "less": "^4.1.2",
-    "less-loader": "^10.2.0",
-    "style-loader": "^3.3.1",
-    "ts-jest": "^27.1.4",
-    "ts-loader": "^9.2.8",
-    "typescript": "^4.6.3",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.8.1"
-  },
+  "homepage": "https://github.com/haixiangyan/jest-tutorial#readme",
   "dependencies": {
-    "antd": "^4.19.5",
-    "axios": "^0.26.1",
-    "classnames": "^2.3.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@reduxjs/toolkit": "1.8.1",
+    "antd": "4.19.5",
+    "axios": "0.26.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-redux": "8.0.1",
+    "react-router-dom": "6.3.0",
+    "redux": "4.2.0"
+  },
+  "devDependencies": {
+    "@swc/core": "1.2.165",
+    "@swc/jest": "0.2.20",
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "12.1.4",
+    "@testing-library/react-hooks": "8.0.0",
+    "@testing-library/user-event": "14.1.0",
+    "@types/jest": "27.4.1",
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2",
+    "@types/redux-mock-store": "1.0.3",
+    "@typescript-eslint/eslint-plugin": "5.19.0",
+    "@typescript-eslint/parser": "5.19.0",
+    "classnames": "2.3.1",
+    "css-loader": "6.7.1",
+    "eslint": "8.13.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-jest": "26.1.4",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-testing-library": "5.3.1",
+    "history": "5.3.0",
+    "html-webpack-plugin": "5.5.0",
+    "husky": "7.0.4",
+    "jest": "27.5.1",
+    "jest-location-mock": "1.0.9",
+    "jest-transform-stub": "2.0.0",
+    "less": "4.1.2",
+    "less-loader": "10.2.0",
+    "lint-staged": "12.3.7",
+    "msw": "0.39.2",
+    "prettier": "2.6.2",
+    "redux-mock-store": "1.5.4",
+    "redux-thunk": "2.4.1",
+    "style-loader": "3.3.1",
+    "ts-jest": "27.1.4",
+    "ts-loader": "9.2.8",
+    "typescript": "4.6.3",
+    "webpack": "5.72.0",
+    "webpack-cli": "4.9.2",
+    "webpack-dev-server": "4.8.1"
   }
 }
