`jest`生成快照`snapShot`; vscode 插件 `jest` 配置

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "webpack serve",
     "lint": "eslint tests src --fix",
     "test": "jest",
+    "test_update_snapshot": "jest --updateSnapshot",
     "prepare": "husky install"
   },
   "repository": {
