--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,11 @@
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
       "disableOptimisticBPs": true,
-      "program": "${workspaceFolder}/node_modules/.bin/jest",
       "cwd": "${workspaceFolder}",
+      "runtimeExecutable": "npm",
       "args": [
+        "test",
+        "--",
         "--runInBand",
         "--watchAll=false",
         "--testNamePattern",
